tests/rascal/negative/parse_errors/L1/reserved2.ob
MODULE MODULE;

BEGIN
  x := 1;
END
